Added archive page, updated footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,9 @@
 <footer class="site-footer">
-
   <div class="wrap">
-
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
     <div class="footer-col-1 column">
       <ul>
-        <li>{{ site.title }}</li>
-        <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+        <li><a href="{{ "/archive.html" | prepend: site.baseurl }}">Archive</a></li>
+        <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS feed</a></li>
       </ul>
     </div>
 
@@ -53,9 +49,7 @@
     </div>
 
     <div class="footer-col-3 column">
-      <p class="text">{{ site.description }}</p>
+		<p class="text">{{ site.description }}</p>
     </div>
-
   </div>
-
 </footer>
