Added support for twitter cards

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <title>{{ site.title }}{% if page.title %} • {{ page.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
@@ -9,4 +9,20 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
+    <!-- twitter cards -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@dashorst">
+    <meta name="twitter:creator" content="@dashorst">
+{% if page.title %}
+    <meta name="twitter:description" content="{{ page.content | markdownify | strip_html | xml_escape | replace:"\\n"," " | replace:"  "," " | replace:"  "," " | strip_newlines | truncate: 200 }}">
+{% elsif page.description %}
+    <meta name="twitter:description" content="{{ page.description }}">
+{% else %}
+    <meta name="twitter:description" content="{{ site.description }}. Latest headlines: {% for post in site.posts limit:3 %}{{ post.title }}{% unless forloop.last %} | {% endunless %}{% endfor %}">
+{% endif %}
+    <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+    <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+{% if page.image %}
+    <meta name="twitter:image:src" content="{{ site.url }}/uploads/{{ page.image }}">
+{% endif %}
 </head>
