--- a/_layouts/link.html
+++ b/_layouts/link.html
@@ -4,11 +4,11 @@ layout: default
 <div class="post">
   <header class="post-header">
     <h1>
-        <a href="page.link">{{ page.title }}</a>
+        <a href="{{ page.link }}">{{ page.title }}</a>
     </h1>
     <p class="meta">
-        {{ page.date | date: "%b %-d, %Y" }}
-        • <a href="{{page.url}}">&#x260D;</a>
+        {{ page.date | date: "%-d %B %Y" }}
+        • <a href="{{ page.url | prepend: site.baseurl }}">&#x260D;</a>
         {% if page.author %} • {{ page.author }}{% endif %}
         {% if page.meta %} • {{ page.meta }}{% endif %}
     </p>
