--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,6 +45,9 @@
             <span class="username">{{ site.username }}</span>
           </a>
         </li>
+	<li>
+          <a rel="me" href="https://mastodon.social/@dashorst">Mastodon</a>
+	</li>
       </ul>
     </div>
 
