--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,16 +9,35 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
+    <!-- Open Graph meta data -->
+    <meta name="og:type" content="article">
+    <meta name="og:site_name" content="Martijn Dashorst's Blog">
+    <meta name="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+{% if page.title %}
+    <meta name="og:description" content="{{ page.content | markdownify | strip_html | xml_escape | replace:"\\n"," " | replace:"  "," " | replace:"  "," " | strip_newlines | truncate: 200 }}">
+{% elsif page.description %}
+    <meta name="og:description" content="{{ page.description }}">
+{% else %}
+    <meta name="og:description" content="{{ site.description }}. Latest headlines: {% for post in site.posts limit:3 %}{{ post.title }}{% unless forloop.last %} | {% endunless %}{% endfor %}">
+{% endif %}
+    <meta name="og:url" content="{{ site.url }}{{ page.url }}">
+{% if page.image %}
+    <meta name="og:image:src" content="{{ site.url }}/uploads/{{ page.image }}">
+{% endif %}
+    
     <!-- twitter cards -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@dashorst">
     <meta name="twitter:creator" content="@dashorst">
 {% if page.title %}
     <meta name="twitter:description" content="{{ page.content | markdownify | strip_html | xml_escape | replace:"\\n"," " | replace:"  "," " | replace:"  "," " | strip_newlines | truncate: 200 }}">
+    <meta name="og:description" content="{{ page.content | markdownify | strip_html | xml_escape | replace:"\\n"," " | replace:"  "," " | replace:"  "," " | strip_newlines | truncate: 200 }}">
 {% elsif page.description %}
     <meta name="twitter:description" content="{{ page.description }}">
+    <meta name="og:description" content="{{ page.description }}">
 {% else %}
     <meta name="twitter:description" content="{{ site.description }}. Latest headlines: {% for post in site.posts limit:3 %}{{ post.title }}{% unless forloop.last %} | {% endunless %}{% endfor %}">
+    <meta name="og:description" content="{{ site.description }}. Latest headlines: {% for post in site.posts limit:3 %}{{ post.title }}{% unless forloop.last %} | {% endunless %}{% endfor %}">
 {% endif %}
     <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
