--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
 {% endif %}
     <meta name="og:url" content="{{ site.url }}{{ page.url }}">
 {% if page.image %}
-    <meta name="og:image:src" content="{{ site.url }}/uploads/{{ page.image }}">
+    <meta name="og:image" content="{{ site.url }}/uploads/{{ page.image }}">
 {% endif %}
     
     <!-- twitter cards -->
